# Roget-s-Thesaurus

./: All_data.csv  Class Centroids embed(Gemini).csv  Class Centroids(OpenAI).csv  Class Centroids.csv  GetData.ipynb  README.md  Roget's Thesaurus.csv  Rogets_Thesaurus_Embeddings.csv  gemini_embeddings.py  hierarchy.csv  openai_embeddings.py  pyproject.toml  rogets_thesaurus.ipynb
